# swagger_server/controllers/market_maker_controller.py
@@ -84,3 +84,13 @@ def get_results():  # noqa: E501
     :rtype: str
     """
     return backend.leaderboard( 10)
+
+def get_all_users():  # noqa: E501
+    """Get all users
+
+    Get all users # noqa: E501
+
+
+    :rtype: List[User]
+    """
+    return backend.get_all_users()
